Add JVM Args for Test